--- a/public/3f/main.css
+++ b/public/3f/main.css
@@ -8,12 +8,14 @@ body { background: #E8E8E8; }
 
 .calculator .cal-header { width: 100%; height: 109px; padding: 0 16px; display: flex; flex-wrap: wrap; align-content: center; align-self: flex-start; justify-content: flex-end; border-radius: 20px 20px 0px 0px; background: #041936; }
 
-.calculator .cal-header .cal { font-size: 16px; color: #00C4FF; }
+.calculator .cal-header .cal { font-size: 16px; line-height: 1; color: #00C4FF; }
 
-.calculator .cal-header .total { font-size: 56px; color: #fff; }
+.calculator .cal-header .total { font-size: 350%; line-height: 1.2; color: #fff; }
 
 .calculator .cal-body { width: 100%; padding: 0 8px; background: #062145; display: flex; flex-wrap: wrap; text-align: center; justify-content: space-between; border-radius: 0px 0px 20px 20px; }
 
 .calculator .cal-body span { display: block; margin: 8px 0; text-align: center; width: 72px; height: 64px; line-height: 64px; border-radius: 16px; font-size: 24px; color: #fff; }
 
 .calculator .cal-body span.oper { background: #041936; }
+
+.calculator .cal-body span.sum { padding: 0 30px 0 0; width: 152px; text-align: right; background: linear-gradient(to right, #00c4ff 0%, #6c00ff 100%); }
