--- a/sourse/3f/main.scss
+++ b/sourse/3f/main.scss
@@ -25,26 +25,32 @@ body{
   box-shadow: 0px 20px 40px #041936;
   background: #062145;
   .cal-header{
+    position: relative;
     width: 100%;
     height: 109px;
-    padding: 0 16px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    align-self: flex-start;
-    justify-content: flex-end;
+    // padding: 16px;
+    text-align: right;
     border-radius: 20px 20px 0px 20px;
     background: #041936;
-    .cal{
+    .digit{
+      position: absolute;
+      top: 16px;
+      right: 16px;
+      width: 100%;
       font-size: 16px;
       line-height: 1;
       color: #00C4FF;
     }
-    .total{
-      // font-size: 56px;
-      font-size: (56/16) * 100%;
+    .cal{
+      position: absolute;
+      bottom: 16px;
+      right: 16px;
+      font-size: 56px;
+      // font-size: (56/16) * 100%;
+      display: block;
       line-height: 1.2;
       color: #fff;
+      transform-origin: 100% 100%;
     }
   }
   .cal-body{
@@ -66,14 +72,26 @@ body{
       border-radius: 16px;
       font-size: 24px;
       color: #fff;
+      cursor: pointer;
+      transition: .3s;
+      &:hover{
+        transition: .3s;
+        background: rgba(#fff, 0.1);
+      }
       &.oper{
         background: #041936;
+        &:hover{
+          background: rgba(#fff, 0.1);
+        }
       }
       &.sum{
         padding: 0 30px 0 0;
         width: (72 * 2 + 8 ) + px;
         text-align: right;
         background: linear-gradient(to right, #00c4ff 0%,#6c00ff 100%);
+        &:hover{
+          background: rgba(#fff, 0.1);
+        }
       }
     }
   }
