--- a/public/6f/main.css
+++ b/public/6f/main.css
@@ -52,3 +52,8 @@ section label { display: block; padding: 5px 10px; font-size: 30px; font-weight:
 section button { margin-top: 100px; width: 350px; height: 58px; color: #FF9D00; font-size: 36px; font-weight: bold; font-family: "Roboto Condensed"; border: 0; background: #000; }
 
 section p.tip { font-size: 24px; line-height: 1.5; color: #fff; font-style: italic; }
+
+@media screen and (max-width: 640px) { section.start .header { flex-wrap: wrap; justify-content: center; }
+  section.play .header { flex-wrap: wrap; justify-content: center; }
+  section.play .header .time { margin-top: 30px; }
+  section.play .calculate { text-align: center; } }
