--- a/sourse/6f/main.scss
+++ b/sourse/6f/main.scss
@@ -168,3 +168,25 @@ section{
   }
 }
 
+@media screen and (max-width: 640px) {
+  section{
+    &.start{
+      .header{
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    }
+    &.play{
+      .header{
+        flex-wrap: wrap;
+        justify-content: center;
+        .time{
+          margin-top: 30px;
+        }
+      }
+      .calculate{
+        text-align: center;
+      }
+    }
+  }
+}
