--- a/sourse/3f/main.scss
+++ b/sourse/3f/main.scss
@@ -32,7 +32,7 @@ body{
     text-align: right;
     border-radius: 20px 20px 0px 20px;
     background: #041936;
-    .digit{
+    .formula{
       position: absolute;
       top: 16px;
       right: 16px;
@@ -41,7 +41,7 @@ body{
       line-height: 1;
       color: #00C4FF;
     }
-    .cal{
+    .result{
       position: absolute;
       bottom: 16px;
       right: 16px;
