--- a/sourse/3f/main.scss
+++ b/sourse/3f/main.scss
@@ -35,11 +35,16 @@ body{
     .formula{
       position: absolute;
       top: 16px;
-      right: 16px;
+      right: 0px;
+      padding: 0 16px;
       width: 100%;
       font-size: 16px;
-      line-height: 1;
+      line-height: 1.2;
       color: #00C4FF;
+      // overflow: hidden;
+      // text-overflow : ellipsis;
+      // white-space : nowrap;
+      word-wrap: break-word;
     }
     .result{
       position: absolute;
