--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -12,7 +12,7 @@ html{
   // font-family: "Roboto Condensed", Arial, sans-serif;
 }
 
-canvas{
-  margin: 0 auto;
-  border: 1px solid #000;
-}
+// canvas{
+//   margin: 0 auto;
+//   border: 1px solid #000;
+// }
