--- a/public/7f/main.css
+++ b/public/7f/main.css
@@ -1,3 +1,21 @@
 * { box-sizing: border-box; }
 
 html { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; }
+
+body, html { font-family: "Noto Sans TC", Arial, sans-serif; font-weight: bold; }
+
+.main { position: relative; width: 1280px; height: 800px; overflow: hidden; }
+
+canvas { position: absolute; left: 0; top: 0; }
+
+.topbar { transition: .3s; position: absolute; top: 0px; left: 0px; z-index: 99; width: 100%; height: 80px; line-height: 80px; display: flex; justify-content: center; background: #fff; }
+
+.topbar:before { position: absolute; bottom: -28px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); content: '\f106'; width: 56px; height: 56px; border-radius: 100%; background: #fff; font-size: 24px; font-family: "Font Awesome 5 Free"; font-weight: 900; text-align: center; }
+
+.topbar.is-active { -webkit-transform: translateY(-80px); transform: translateY(-80px); }
+
+.topbar.is-active:before { content: '\f107'; }
+
+.func { font-size: 20px; font-weight: bold; margin: 0 20px; cursor: pointer; text-decoration: none; color: #000; }
+
+.func i { margin-right: 10px; font-size: 40px; vertical-align: middle; }
