--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -9,10 +9,72 @@ html{
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  // background-color: #efefef;
   // font-family: "Roboto Condensed", Arial, sans-serif;
 }
+body,html{
+  font-family: "Noto Sans TC", Arial, sans-serif;
+  font-weight: bold;
+}
 
-// canvas{
-//   margin: 0 auto;
-//   border: 1px solid #000;
-// }
+.main{
+  position: relative;
+  width: 1280px;
+  height: 800px;
+  overflow: hidden;
+}
+canvas{
+  position: absolute;
+  left: 0;
+  top: 0;
+  // margin: 0 auto;
+  // border: 1px solid #000;
+}
+.topbar{
+  transition: .3s;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 99;
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  &:before{
+    position: absolute;
+    bottom: -56/2 + px;
+    left: 50%;
+    transform: translateX(-50%);
+    content: '\f106';
+    width: 56px;
+    height: 56px;
+    border-radius: 100%;
+    background: #fff;
+    font-size: 24px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    text-align: center;
+  }
+  &.is-active{
+    transform: translateY(-80px);
+    &:before{
+      content: '\f107';
+    }
+  }
+}
+.func{
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0 20px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
+  i{
+    margin-right: 10px;
+    font-size: 40px;
+    vertical-align: middle;
+  }
+}
