--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -20,8 +20,8 @@ body,html{
 
 .main{
   position: relative;
-  width: 1280px;
-  height: 800px;
+  // width: 1280px;
+  // height: 800px;
   overflow: hidden;
 }
 canvas{
