--- a/public/7f/main.css
+++ b/public/7f/main.css
@@ -10,12 +10,18 @@ canvas { position: absolute; left: 0; top: 0; }
 
 .topbar { transition: .3s; position: absolute; top: 0px; left: 0px; z-index: 99; width: 100%; height: 80px; line-height: 80px; display: flex; justify-content: center; background: #fff; }
 
-.topbar:before { position: absolute; bottom: -28px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); content: '\f106'; width: 56px; height: 56px; border-radius: 100%; background: #fff; font-size: 24px; font-family: "Font Awesome 5 Free"; font-weight: 900; text-align: center; }
+.topbar button { bottom: -28px; }
 
-.topbar.is-active { -webkit-transform: translateY(-80px); transform: translateY(-80px); }
+.bottombar { transition: .3s; position: absolute; bottom: 0px; left: 0px; z-index: 99; width: 100%; height: 80px; line-height: 80px; display: flex; justify-content: center; background: #fff; }
 
-.topbar.is-active:before { content: '\f107'; }
+.bottombar .pensize input { width: 74px; height: 48px; border: 0; text-align: center; border-radius: 24px; font-size: 20px; font-weight: bold; outline: none; background: #E8E8E8; }
+
+button { position: absolute; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); text-align: center; width: 56px; height: 56px; border-radius: 100%; border: 0; font-size: 24px; background: #fff; }
+
+button i { position: relative; top: 12px; }
 
 .func { font-size: 20px; font-weight: bold; margin: 0 20px; cursor: pointer; text-decoration: none; color: #000; }
 
 .func i { margin-right: 10px; font-size: 40px; vertical-align: middle; }
+
+.func.pen { cursor: auto; }
