--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -43,27 +43,73 @@ canvas{
   display: flex;
   justify-content: center;
   background: #fff;
-  &:before{
-    position: absolute;
-    bottom: -56/2 + px;
-    left: 50%;
-    transform: translateX(-50%);
-    content: '\f106';
-    width: 56px;
-    height: 56px;
-    border-radius: 100%;
-    background: #fff;
-    font-size: 24px;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    text-align: center;
+  button{
+    bottom: -56/2 + px;  
   }
-  &.is-active{
-    transform: translateY(-80px);
-    &:before{
-      content: '\f107';
+  // &:before{
+  //   position: absolute;
+  //   bottom: -56/2 + px;
+  //   left: 50%;
+  //   transform: translateX(-50%);
+  //   content: '\f106';
+  //   width: 56px;
+  //   height: 56px;
+  //   border-radius: 100%;
+  //   background: #fff;
+  //   font-size: 24px;
+  //   font-family: "Font Awesome 5 Free";
+  //   font-weight: 900;
+  //   text-align: center;
+  // }
+  // &.is-active{
+  //   transform: translateY(-80px);
+  //   &:before{
+  //     content: '\f107';
+  //   }
+  // }
+}
+.bottombar{
+  transition: .3s;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  z-index: 99;
+  width: 100%;
+  height: 80px;
+  line-height: 80px;
+  display: flex;
+  justify-content: center;
+  background: #fff;
+  .pensize{
+    input{
+      width: 74px;
+      height: 48px;
+      border: 0;
+      text-align: center;
+      border-radius: 24px;
+      font-size: 20px;
+      font-weight: bold;
+      outline: none;
+      background: #E8E8E8;
     }
   }
+}
+button{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+  border: 0;
+  font-size: 24px;
+  background: #fff;
+  i{
+    position: relative;
+    top: 12px;
+  }
+  
 }
 .func{
   font-size: 20px;
@@ -76,5 +122,8 @@ canvas{
     margin-right: 10px;
     font-size: 40px;
     vertical-align: middle;
+  }
+  &.pen{
+    cursor: auto;
   }
 }
