--- a/public/7f/main.css
+++ b/public/7f/main.css
@@ -12,11 +12,19 @@ canvas { position: absolute; left: 0; top: 0; }
 
 .topbar button { bottom: -28px; }
 
+.topbar.is-active { -webkit-transform: translateY(-80px); transform: translateY(-80px); }
+
 .bottombar { transition: .3s; position: absolute; bottom: 0px; left: 0px; z-index: 99; width: 100%; height: 80px; line-height: 80px; display: flex; justify-content: center; background: #fff; }
 
 .bottombar .pensize input { width: 74px; height: 48px; border: 0; text-align: center; border-radius: 24px; font-size: 20px; font-weight: bold; outline: none; background: #E8E8E8; }
 
-button { position: absolute; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); text-align: center; width: 56px; height: 56px; border-radius: 100%; border: 0; font-size: 24px; background: #fff; }
+.bottombar .pencolor input[type=color] { -webkit-appearance: none; width: 48px; height: 48px; vertical-align: middle; }
+
+.bottombar .pencolor input[type=color]::-webkit-color-swatch-wrapper { padding: 0; }
+
+.bottombar .pencolor input[type=color]::-webkit-color-swatch { border: none; }
+
+button { position: absolute; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); text-align: center; width: 56px; height: 56px; border-radius: 100%; border: 0; font-size: 24px; outline: none; background: #fff; }
 
 button i { position: relative; top: 12px; }
 
