--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -44,7 +44,10 @@ canvas{
   justify-content: center;
   background: #fff;
   button{
-    bottom: -56/2 + px;  
+    bottom: -56/2 + px;
+  }
+  &.is-active{
+    transform: translateY(-80px);
   }
   // &:before{
   //   position: absolute;
@@ -93,6 +96,21 @@ canvas{
       background: #E8E8E8;
     }
   }
+  .pencolor{
+    input[type=color]{
+      -webkit-appearance: none;
+      width: 48px;
+      height: 48px;
+      // border-radius: 100%;
+      vertical-align: middle;
+      &::-webkit-color-swatch-wrapper {
+        padding: 0;
+      }
+      &::-webkit-color-swatch {
+        border: none;
+      }
+    }
+  }
 }
 button{
   position: absolute;
@@ -104,6 +122,7 @@ button{
   border-radius: 100%;
   border: 0;
   font-size: 24px;
+  outline: none;
   background: #fff;
   i{
     position: relative;
