--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -46,45 +46,32 @@ canvas{
   button{
     bottom: -56/2 + px;
   }
-  &.is-active{
+  &.is-close{
     transform: translateY(-80px);
   }
-  // &:before{
-  //   position: absolute;
-  //   bottom: -56/2 + px;
-  //   left: 50%;
-  //   transform: translateX(-50%);
-  //   content: '\f106';
-  //   width: 56px;
-  //   height: 56px;
-  //   border-radius: 100%;
-  //   background: #fff;
-  //   font-size: 24px;
-  //   font-family: "Font Awesome 5 Free";
-  //   font-weight: 900;
-  //   text-align: center;
-  // }
-  // &.is-active{
-  //   transform: translateY(-80px);
-  //   &:before{
-  //     content: '\f107';
-  //   }
-  // }
 }
 .bottombar{
   transition: .3s;
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 99;
-  width: 100%;
-  height: 80px;
+  width: 80%;
+  // height: 80px;
   line-height: 80px;
   display: flex;
   justify-content: center;
   background: #fff;
+  border-radius: 40px;
+  box-shadow: 0px 4p 16px #000000;
+  div{
+    transition: .3s;
+    transition-delay: .3s;
+    opacity: 100;
+  }
   .pensize{
-    input{
+    input[type=text]{
       width: 74px;
       height: 48px;
       border: 0;
@@ -94,6 +81,10 @@ canvas{
       font-weight: bold;
       outline: none;
       background: #E8E8E8;
+    }
+    input[type=range]{
+      transform: rotate(270deg);
+      width: 60px;
     }
   }
   .pencolor{
@@ -109,6 +100,27 @@ canvas{
       &::-webkit-color-swatch {
         border: none;
       }
+    }
+  }
+  button{
+    top: -56/2 + px;
+    i{
+      transition: .3s;
+      transition-delay: .35s;
+      top: -12px;
+    }
+  }
+  &.is-close{
+    width: 0;
+    transition-delay: .35s;
+    button i{
+      top: 0;
+    }
+    div{
+      transition: 0;
+      transition-delay: 0;
+      opacity: 0;
+      display: none;
     }
   }
 }
@@ -131,6 +143,7 @@ button{
   
 }
 .func{
+  position: relative;
   font-size: 20px;
   font-weight: bold;
   margin: 0 20px;
