--- a/sourse/7f/main.scss
+++ b/sourse/7f/main.scss
@@ -77,7 +77,7 @@ canvas{
     }
   }
   .pensize{
-    input[type=text]{
+    input[type=select]{
       width: 74px;
       height: 48px;
       border: 0;
@@ -156,6 +156,9 @@ button{
   cursor: pointer;
   text-decoration: none;
   color: #000;
+  &.paint{
+    margin: 5px;
+  }
   i{
     margin-right: 10px;
     font-size: 40px;
