--- a/public/8f/main.css
+++ b/public/8f/main.css
@@ -2,6 +2,62 @@
 
 html { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; }
 
-body, html { font-family: "Noto Sans TC", Arial, sans-serif; font-weight: bold; }
+body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto Condensed", Arial, sans-serif; font-weight: bold; }
 
-.main { position: relative; overflow: hidden; }
+.main { position: relative; width: 100%; height: 100%; }
+
+.tictactoe { width: 35.625rem; padding: 0.5rem; color: #fff; display: flex; justify-content: center; align-items: center; flex-wrap: wrap; }
+
+.tictactoe div { width: 11.25rem; height: 11.25rem; text-align: center; vertical-align: middle; display: inline-block; line-height: 0; }
+
+.tictactoe div:before { content: ''; display: inline-block; vertical-align: middle; width: 0; height: 100%; }
+
+.tictactoe div i { vertical-align: middle; font-size: 5.625rem; }
+
+.tictactoe div i.fa-circle { color: #000; }
+
+.tictactoe div i.fa-times { color: #fff; }
+
+button { margin: 1rem; width: 33.75rem; height: 5.625rem; border-radius: 0.5rem; border: 0; font-size: 3rem; font-weight: bold; font-family: "Roboto Condensed"; }
+
+.start button { color: #FF6D70; background: #fff; }
+
+.game button { color: #fff; background: #ED494C; }
+
+.start { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: #000; }
+
+.start .tictactoe div:nth-child(1), .start .tictactoe div:nth-child(5), .start .tictactoe div:nth-child(9) { font-style: italic; font-size: 6.25rem; }
+
+.start .tictactoe div:nth-child(2) { font-size: 16.875rem; color: #ed494c; }
+
+.start .tictactoe div:nth-child(3) { font-size: 8.75rem; color: #000; text-shadow: -0.3125rem 0px #fff, 0px 0.3125rem #fff, 0.3125rem 0px #fff, 0px -0.3125rem #fff; }
+
+.start .tictactoe div:nth-child(4), .start .tictactoe div:nth-child(8) { font-size: 8.75rem; color: #ed494c; }
+
+.start .tictactoe div:nth-child(6), .start .tictactoe div:nth-child(7) { font-size: 16.875rem; color: #000; text-shadow: -0.3125rem 0px #ed494c, 0px 0.3125rem #ed494c, 0.3125rem 0px #ed494c, 0px -0.3125rem #ed494c; }
+
+.game { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; background-color: #FF6D70; }
+
+.game .tictactoe div { border-left: 8px solid #ED494C; border-bottom: 8px solid #ED494C; }
+
+.game .tictactoe div:nth-child(3n+1) { border-left: 0px; }
+
+.game .tictactoe div:nth-child(7), .game .tictactoe div:nth-child(8), .game .tictactoe div:nth-child(9) { border-bottom: 0px; }
+
+@media screen and (min-width: 320px) { body, html { font-size: 8px; } }
+
+@media screen and (min-width: 360px) { body, html { font-size: 9px; } }
+
+@media screen and (min-width: 400px) { body, html { font-size: 10px; } }
+
+@media screen and (min-width: 440px) { body, html { font-size: 11px; } }
+
+@media screen and (min-width: 480px) { body, html { font-size: 12px; } }
+
+@media screen and (min-width: 520px) { body, html { font-size: 13px; } }
+
+@media screen and (min-width: 560px) { body, html { font-size: 14px; } }
+
+@media screen and (min-width: 600px) { body, html { font-size: 15px; } }
+
+@media screen and (min-width: 640px) { body, html { font-size: 16px; } }
