--- a/sourse/8f/main.scss
+++ b/sourse/8f/main.scss
@@ -31,10 +31,14 @@ body,html{
   position: relative;
   width: 100%;
   height: 100%;
+  .content{
+    text-align: center; 
+  }
 }
 
 .tictactoe{
-  width: rem(570px);
+  width: rem(572px);
+  margin: rem(16px);
   padding: rem(8px);
   color: #fff;
   display: flex;
@@ -64,8 +68,97 @@ body,html{
   }
 }
 
-button{
+.result{
+  position: relative;
   margin: rem(16px);
+  padding: rem(8px);
+  width: rem(572px);
+  height: rem(572px);
+  i{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    color: #ED494C;
+    font-size: rem(450px);
+  }
+  .text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: rem(154px);
+    font-style: italic;
+    -webkit-text-stroke: rem(5px) #fff;
+    color: transparent;
+    // text-shadow: 
+    //   rem(-5px) 5px #fff,
+    //   5px rem(5px) #fff, 
+    //   rem(5px) 5px #fff,  
+    //   5px rem(-5px) #fff, 
+  }
+}
+
+.score{
+  position: relative;
+  margin-bottom: rem(32px);
+  display: flex;
+  justify-content: space-between;
+  line-height: rem(60px);
+  font-size: rem(48px);
+  border:rem(4px) solid #000;
+  border-radius: rem(8px);
+  background-color: #fff;
+  .trun{
+    position: relative;
+    flex: 0 0 auto;
+    width: rem(61px);
+    color: #fff;
+    background: #ED494C;
+    border-radius: rem(4px) 0 0 rem(4px);
+    &:last-child{
+      background: #000;
+      border-radius: 0 rem(4px) rem(4px) 0;
+      font-size: rem(100px);
+      font-weight: bold;
+      line-height: rem(46px);
+    }
+    &.is-active{
+      &:after{
+        position: absolute;
+        top: rem(50px);
+        right: -100%;
+        width: 200%;
+        content: 'YOUR TURN!';
+        color: #fff;
+        font-size: rem(20px);
+        line-height: rem(60px);
+      }
+      &:last-child{
+        &:after{
+          left: -100%;
+        }
+      }
+    }
+    
+  }
+  .num{
+    flex: 0 0 auto;
+  }
+  .vs{
+    margin-top: rem(-10px);
+    width: rem(70px);
+    height: rem(70px);
+    line-height: rem(80px);
+    font-size: rem(20px);
+    color: #fff;
+    background: #000;
+    border-radius: rem(8px) rem(8px) 0 0;
+  }
+}
+
+button{
   width: rem(180*3px);
   height: rem(90px);
   border-radius: rem(8px);
@@ -77,7 +170,7 @@ button{
     color: #FF6D70;
     background: #fff;  
   }
-  .game &{
+  .game &,.winner &{
     color: #fff;
     background: #ED494C;
   }
@@ -149,6 +242,15 @@ button{
   }
 }
 
+.winner{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  background-color: #FF6D70;
+}
 
 
 
