--- a/public/8f/main.css
+++ b/public/8f/main.css
@@ -26,7 +26,7 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .result .text { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); font-size: 9.625rem; font-style: italic; -webkit-text-stroke: 0.3125rem #fff; color: transparent; }
 
-.score { position: relative; margin-bottom: 2rem; display: flex; justify-content: space-between; line-height: 3.75rem; font-size: 3rem; border: 0.25rem solid #000; border-radius: 0.5rem; background-color: #fff; }
+.score { width: 33.75rem; position: relative; margin: 0 auto 2rem auto; display: flex; justify-content: space-between; line-height: 3.75rem; font-size: 3rem; border: 0.25rem solid #000; border-radius: 0.5rem; background-color: #fff; }
 
 .score .trun { position: relative; flex: 0 0 auto; width: 3.8125rem; color: #fff; background: #000; border-radius: 0.25rem 0 0 0.25rem; border-right: 0.25rem solid #000; border-left: 0; }
 
