--- a/public/9f/main.css
+++ b/public/9f/main.css
@@ -8,17 +8,41 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .main .content { text-align: center; }
 
-.turntable { position: relative; width: 540px; height: 540px; background-image: url("img/wheel-outside.svg"); background-repeat: no-repeat; background-position: center; background-size: contain; }
+.result { position: absolute; z-index: 0; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 50%; height: 237px; text-align: center; color: #fff; background: #3835b1; display: inline-block; }
 
-.turntable .item { position: absolute; top: 28px; right: 28px; width: 242.5px; height: 485px; border-radius: 0 242.5px 242.5px 0; overflow: hidden; -webkit-transform-origin: 0% 50%; transform-origin: 0% 50%; }
+.result:before { content: ''; width: 0; height: 100%; display: inline-block; vertical-align: middle; }
 
-.turntable .item .fill { position: absolute; top: 0; right: 0; width: 485px; height: 242.5px; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; -webkit-transform: rotate(-90deg); transform: rotate(-90deg); border: 0px solid #1F1172; border-width: 0 0 2px 0; }
+.result i { display: block; color: #FF00BA; font-size: 72px; text-decoration: underline; }
 
-.turntable .item:nth-child(even) .fill { background: #F0BEFF; }
+.result .result-text { display: inline-block; vertical-align: middle; text-align: left; }
 
-.turntable .item:nth-child(odd) .fill { background: #343BAA; }
+.result.lt { left: 0; font-size: 72px; }
 
-.turntable .item .gift { position: absolute; width: 50%; height: 50%; color: #fff; background: #000; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; }
+.result.lt .result-text { margin-right: 270px; }
+
+.result.rt { right: 0; font-size: 32px; }
+
+.result.rt .result-text { margin-left: 270px; }
+
+.turntable { position: relative; z-index: 1; width: 540px; height: 540px; background-image: url("img/wheel-outside.svg"); background-repeat: no-repeat; background-position: center; background-size: contain; flex: 0 0 auto; }
+
+.turntable .item { position: relative; -webkit-transform-origin: 50% 50%; transform-origin: 50% 50%; width: 100%; height: 100%; }
+
+.turntable .items { position: absolute; top: 28px; right: 28px; width: 242.5px; height: 485px; border-radius: 0 242.5px 242.5px 0; overflow: hidden; -webkit-transform-origin: 0% 50%; transform-origin: 0% 50%; }
+
+.turntable .items .fill { position: absolute; top: 0; right: 0; width: 485px; height: 242.5px; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; -webkit-transform: rotate(-90deg); transform: rotate(-90deg); border: 0px solid #1F1172; border-width: 0 0 2px 0; }
+
+.turntable .items .gift { position: absolute; left: 0; top: 0; margin-left: -25%; width: 50%; height: 50%; text-align: center; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; }
+
+.turntable .items .gift-block { margin-top: 30px; }
+
+.turntable .items:nth-child(even) .fill { background: #F0BEFF; }
+
+.turntable .items:nth-child(even) .gift { color: #343BAA; }
+
+.turntable .items:nth-child(odd) .fill { background: #343BAA; }
+
+.turntable .items:nth-child(odd) .gift { color: #F0BEFF; }
 
 .turntable .hand { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -69%) rotate(0deg); transform: translate(-50%, -69%) rotate(0deg); width: 128px; height: 208px; background-image: url("img/hand.svg"); background-repeat: no-repeat; background-position: center; background-size: contain; -webkit-transform-origin: 50% 69%; transform-origin: 50% 69%; }
 
