--- a/public/9f/main.css
+++ b/public/9f/main.css
@@ -8,13 +8,15 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .main .content { text-align: center; }
 
-.result { position: absolute; z-index: 0; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 50%; height: 237px; text-align: center; color: #fff; background: #3835b1; display: inline-block; }
+.result { overflow: hidden; position: absolute; z-index: 0; top: 50%; -webkit-transform: translateY(-50%); transform: translateY(-50%); width: 50%; height: 237px; text-align: center; color: #fff; background: #3835b1; display: inline-block; }
 
 .result:before { content: ''; width: 0; height: 100%; display: inline-block; vertical-align: middle; }
 
-.result i { display: block; color: #FF00BA; font-size: 72px; text-decoration: underline; }
+.result p { display: block; color: #FF00BA; font-size: 72px; text-decoration: underline; }
 
-.result .result-text { display: inline-block; vertical-align: middle; text-align: left; }
+.result i { position: absolute; color: rgba(31, 17, 114, 0.7); font-size: 50px; }
+
+.result .result-text { display: inline-block; vertical-align: middle; text-align: left; position: relative; z-index: 2; background: #3835b1; }
 
 .result.lt { left: 0; font-size: 72px; }
 
@@ -26,15 +28,19 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .turntable { position: relative; z-index: 1; width: 540px; height: 540px; background-image: url("img/wheel-outside.svg"); background-repeat: no-repeat; background-position: center; background-size: contain; flex: 0 0 auto; }
 
-.turntable .item { position: relative; -webkit-transform-origin: 50% 50%; transform-origin: 50% 50%; width: 100%; height: 100%; }
+.turntable .item { position: relative; -webkit-transform-origin: 50% 50%; transform-origin: 50% 50%; width: 100%; height: 100%; border-radius: 100%; }
 
-.turntable .items { position: absolute; top: 28px; right: 28px; width: 242.5px; height: 485px; border-radius: 0 242.5px 242.5px 0; overflow: hidden; -webkit-transform-origin: 0% 50%; transform-origin: 0% 50%; }
+.turntable .item:after { position: absolute; content: ''; width: 90%; height: 90%; top: 5%; left: 5%; background: #343BAA; border-radius: 100%; z-index: 0; }
 
-.turntable .items .fill { position: absolute; top: 0; right: 0; width: 485px; height: 242.5px; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; -webkit-transform: rotate(-90deg); transform: rotate(-90deg); border: 0px solid #1F1172; border-width: 0 0 2px 0; }
+.turntable .items { position: absolute; z-index: 1; top: 28px; right: 28px; width: 242.5px; height: 485px; border-radius: 0 242.5px 242.5px 0; overflow: hidden; -webkit-transform-origin: 0% 50%; transform-origin: 0% 50%; }
+
+.turntable .items .fill { position: absolute; top: 0; right: 0; width: 485px; height: 242.5px; background: #343BAA; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; -webkit-transform: rotate(-90deg); transform: rotate(-90deg); border: 0px solid #1F1172; border-width: 0 0 2px 0; }
 
 .turntable .items .gift { position: absolute; left: 0; top: 0; margin-left: -25%; width: 50%; height: 50%; text-align: center; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; }
 
 .turntable .items .gift-block { margin-top: 30px; }
+
+.turntable .items .gift .gift-block i { display: block; }
 
 .turntable .items:nth-child(even) .fill { background: #F0BEFF; }
 
@@ -44,6 +50,16 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .turntable .items:nth-child(odd) .gift { color: #F0BEFF; }
 
-.turntable .hand { position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -69%) rotate(0deg); transform: translate(-50%, -69%) rotate(0deg); width: 128px; height: 208px; background-image: url("img/hand.svg"); background-repeat: no-repeat; background-position: center; background-size: contain; -webkit-transform-origin: 50% 69%; transform-origin: 50% 69%; }
+.turntable .items.is-active .fill { background: #FF00BA; }
 
-.turntable .press { position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 101px; height: 101px; text-align: center; line-height: 101px; font-size: 30px; color: #FF00BA; border-radius: 100%; background: #1F1172; cursor: pointer; }
+.turntable .items.is-active .gift { color: #fff; }
+
+.turntable .hand { position: absolute; z-index: 99; top: 50%; left: 50%; -webkit-transform: translate(-50%, -69%) rotate(0deg); transform: translate(-50%, -69%) rotate(0deg); width: 128px; height: 208px; background-image: url("img/hand.svg"); background-repeat: no-repeat; background-position: center; background-size: contain; -webkit-transform-origin: 50% 69%; transform-origin: 50% 69%; }
+
+.turntable .press { position: absolute; z-index: 99; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 101px; height: 101px; text-align: center; line-height: 101px; font-size: 30px; color: #FF00BA; border-radius: 100%; background: #1F1172; cursor: pointer; }
+
+.infoset { position: absolute; top: 50px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); }
+
+.infoset .btn { display: inline-block; vertical-align: top; }
+
+.infoset .getResult { display: inline-block; color: #1F1172; }
