--- a/public/9f/main.css
+++ b/public/9f/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * { box-sizing: border-box; }
 
 html { position: relative; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; }
@@ -32,7 +33,7 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .turntable .item:after { position: absolute; content: ''; width: 90%; height: 90%; top: 5%; left: 5%; background: #343BAA; border-radius: 100%; z-index: 0; }
 
-.turntable .items { position: absolute; z-index: 1; top: 28px; right: 28px; width: 242.5px; height: 485px; border-radius: 0 242.5px 242.5px 0; overflow: hidden; -webkit-transform-origin: 0% 50%; transform-origin: 0% 50%; }
+.turntable .items { position: absolute; z-index: 1; top: 28px; right: 28px; width: 242.5px; height: 485px; border-radius: 0 242.5px 242.5px 0; overflow: hidden; -webkit-transform-origin: 0% 50%; transform-origin: 0% 50%; font-family: "Roboto Condensed", "微軟正黑體"; }
 
 .turntable .items .fill { position: absolute; top: 0; right: 0; width: 485px; height: 242.5px; background: #343BAA; -webkit-transform-origin: 50% 100%; transform-origin: 50% 100%; -webkit-transform: rotate(-90deg); transform: rotate(-90deg); border: 0px solid #1F1172; border-width: 0 0 2px 0; }
 
@@ -58,7 +59,7 @@ body, html { position: relative; width: 100%; height: 100%; font-family: "Roboto
 
 .turntable .press { position: absolute; z-index: 99; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 101px; height: 101px; text-align: center; line-height: 101px; font-size: 30px; color: #FF00BA; border-radius: 100%; background: #1F1172; cursor: pointer; }
 
-.infoset { position: absolute; top: 50px; left: 50%; -webkit-transform: translateX(-50%); transform: translateX(-50%); }
+.infoset { position: absolute; top: 50px; right: 10px; }
 
 .infoset .btn { display: inline-block; vertical-align: top; }
 
