--- a/sourse/9f/main.scss
+++ b/sourse/9f/main.scss
@@ -21,7 +21,7 @@ body,html{
   position: relative;
   width: 100%;
   height: 100%;
-  font-family: "Roboto Condensed", Arial, sans-serif;
+  font-family: "Roboto Condensed","微軟正黑體", Arial, sans-serif;
   font-weight: bold;
 }
 
@@ -136,7 +136,6 @@ body,html{
     border-radius:0 (485/2)+px (485/2)+px 0;
     overflow: hidden;
     transform-origin:0% 50%;
-    font-family: "Roboto Condensed", "微軟正黑體";
     // background: #343BAA;
     .fill{
       position:absolute;
