--- a/sourse/9f/main.scss
+++ b/sourse/9f/main.scss
@@ -147,7 +147,7 @@ body,html{
       background: #343BAA;
       transform-origin:50% 100%;
       transform:rotate(-90deg);
-      border:0px solid #1F1172;
+      // border:0px solid #1F1172;
       border-width: 0 0 2px 0;
       border-radius: 485px 485px 0 0;
     }
@@ -157,25 +157,25 @@ body,html{
       right:0; 
       width: 485px;
       height: (485/2)+px;
-      background: #ffc;
+      // background: #ffc;
       transform-origin:50% 100%;
       transform:rotate(90deg);
       // border:0px solid #1F1172;
       // border-width: 0 0 2px 0;
       border-radius: 485px 485px 0 0;
     }
-    .fill2{
-      position:absolute;
-      top:0;
-      right:0; 
-      width: 485px;
-      height: (485/2)+px;
-      background: #343BAA;
-      transform-origin:50% 100%;
-      transform:rotate(90deg);
-      border:0px solid #1F1172;
-      border-width: 0 0 2px 0;
-    }
+    // .fill2{
+    //   position:absolute;
+    //   top:0;
+    //   right:0; 
+    //   width: 485px;
+    //   height: (485/2)+px;
+    //   background: #343BAA;
+    //   transform-origin:50% 100%;
+    //   transform:rotate(90deg);
+    //   border:0px solid #1F1172;
+    //   border-width: 0 0 2px 0;
+    // }
     .gift{
       position: absolute;
       left:0;
